--- a/css/transit2.css
+++ b/css/transit2.css
@@ -240,7 +240,8 @@
 }
 
 .smb-section__header,.smb-section__subtitle,.smb-section__title {
-    text-align: center
+    text-align: center;
+    padding-top: 20px;
 }
 
 .smb-section__header>*,.smb-section__header>.c-container>* {
