--- a/css/specimen.css
+++ b/css/specimen.css
@@ -31769,5 +31769,9 @@ pre.wp-block-verse {
         font-size: 28px;
         margin-bottom: 10px;
     }
+
+    .img-company-relapis{
+        height: 90%;
+    }
 }
 
