--- a/css/specimen.css
+++ b/css/specimen.css
@@ -2810,7 +2810,9 @@ h1.has-background,h2.has-background,h3.has-background,h4.has-background,h5.has-b
 }
 
 .wp-block-image:not(.is-style-rounded) img,.wp-block-image:not(.is-style-rounded)>a {
-    border-radius: inherit
+    border-radius: inherit;
+    max-height: 100px;
+    width: auto
 }
 
 .wp-block-image.aligncenter {
