--- a/css/style.css
+++ b/css/style.css
@@ -1432,6 +1432,9 @@ li {
     .members-text{
         color: #000;
         font-size: 13px;
+        margin-top: auto;
+        margin-bottom: auto;
+        height: 20px;
     }
 
 
@@ -1463,6 +1466,17 @@ li {
       .member-accordion{
         text-align: left;
       }
+
+      .size-full{
+        text-align: center;
+      }
+
+      .index-text::before{
+        content: ●;
+        font-size: 14px;
+        color: #000;
+      }
+
 }
 
 
