--- a/css/transit1.css
+++ b/css/transit1.css
@@ -408,8 +408,8 @@ body button {
     .wp-block-navigation__container .menu-item,.wp-block-navigation__container .wp-block-navigation-item {
         border-radius: 20px;
         height: 40px;
-        min-width: 90px;
-        width: auto
+        min-width: 105px;
+        width: auto;
     }
 }
 
@@ -5910,7 +5910,8 @@ body button {
     margin-top: 0;
     opacity: 1;
     transform: translateX(0);
-    transition: transform .8s ease-out,opacity .8s linear
+    transition: transform .8s ease-out,opacity .8s linear;
+    white-space: nowrap;
 }
 
 
