--- a/css/index.css
+++ b/css/index.css
@@ -3,3 +3,37 @@
 .smb-section__contents-wrapper {
     background-color: #fff;
 }
+
+.smb-section{
+    position: relative;
+    display: block;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 10px;
+    /* margin: 30px auto; */
+  }
+  
+  .smb-section::after {
+    content: "";
+    position: absolute;
+    bottom: -25px;
+    left: 0;
+    height: 3px; /* グラデ部分は太め */
+    width: 40%; /* グラデの長さをここで調整 */
+    background: linear-gradient( to right,
+    #69b5e6, 
+    #a46ec5, 
+    #f17c83, 
+    #f4b66d, 
+    #f3e37c  ); /* グラデ部分の色 */
+  }
+  
+  .smb-section::before {
+    content: "";
+    position: absolute;
+    bottom: -24px;
+    left: 40%; /* グラデの終わりに合わせる */
+    height: 1px; /* 単色部分は細め */
+    width: calc(100% - 40%); /* 残りを単色で */
+    background-color: #9c9c9c; /* 単色の色 */
+  }
