--- a/css/specimen.css
+++ b/css/specimen.css
@@ -1898,6 +1898,7 @@ button.swiper-pagination-bullet {
     text-align: center;
     margin-left: 0;
     /* margin-left: var(--wp--style--block-gap,2em) */
+    margin-top: -20px;
 }
 
 .wp-block-column {
@@ -16810,9 +16811,11 @@ pre.wp-block-verse {
 
 @media screen and (max-width: 750px) {
     .m-kv--recruit {
-        background: url(../img/recruit.jpg);
+        background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+         url(../img/recruit.jpg);
         background-size: cover;
         background-position: center left;
+        
     }
 }
 
@@ -17047,9 +17050,10 @@ pre.wp-block-verse {
 
 @media screen and (max-width: 750px) {
     .m-kv--profile {
-        background:url(https://placehold.jp/750x400.png);
+        background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+        url(../img/company-profile.jpg);
         background-size: cover;
-        background-position: center left
+        background-position: center left;
     }
 }
 
@@ -17325,7 +17329,8 @@ pre.wp-block-verse {
 }
 
 .m-kv__ttl span {
-    display: block
+    display: block;
+    color: #fff;
 }
 
 .m-kv__ttl.en {
@@ -19031,7 +19036,7 @@ pre.wp-block-verse {
         margin-top:calc(30/750*100vw);
         text-align: left;
         margin-bottom: 70px;
-        border-top: solid 0.5px #000;
+        border-top: 0;
         padding-top: 50px;
     }
 }
@@ -26959,8 +26964,11 @@ pre.wp-block-verse {
     .p-recruit__leadTtl {
         font-size:20px;
         font-size: 5.33333vw;
-        line-height: 1.5
+        line-height: 1.5;
+        text-align: left;
     }
+
+
 }
 
 .p-recruit__leadTtl span {
@@ -26973,6 +26981,10 @@ pre.wp-block-verse {
     .p-recruit__leadTtl span {
         font-size:26px;
         font-size: 6.93333vw
+    }
+
+    .recruit-main-message-en{
+        font-size: 4.5vw !important;
     }
 }
 
@@ -31224,7 +31236,7 @@ pre.wp-block-verse {
     .p-profile__list-downer{
         margin: 0;
         width: 100%;
-        padding-top: 50px;
+        /* padding-top: 50px; */
         background-color: #fff;
         /* padding-bottom: 40px; */
     }
@@ -31248,7 +31260,7 @@ pre.wp-block-verse {
     -ms-flex-pack: justify;
     justify-content: space-between;
     padding: 30px 0;
-    border-bottom: 1px solid #e5e5e5
+    /* border-bottom: 1px solid #e5e5e5 */
 }
 
 @media screen and (max-width: 750px) {
