--- a/css/transit1.css
+++ b/css/transit1.css
@@ -97,7 +97,8 @@ body button {
 
 [data-has-sidebar=false] .c-entry__content>.alignfull {
     margin-left: 0;
-    margin-right: 0
+    margin-right: 0;
+    margin-top: 70px;
 }
 
 .p-archive {
@@ -113,7 +114,7 @@ body button {
 .p-entry-content>:not(:first-child) {
     background-color: #fff;
     margin-top: 0;
-    border-top: solid 1px #eaeaea;
+    /* border-top: solid 1px #eaeaea; */
     margin-top: 40px;
     /* padding-top: 70px; */
     padding-bottom: 0;
@@ -1577,7 +1578,8 @@ body button {
 }
 
 .l-footer__upper {
-    background-color: #2c2c2c
+    background-color: #2c2c2c;
+    margin-top: 30px;
 }
 
 .l-footer__upper a {
@@ -2875,8 +2877,8 @@ body button {
     .thd_top__recruit .smb-section__contents-wrapper {
         margin-left: 5.3333333333vw!important;
         margin-top: -40px!important;
-        padding: 40px 20px 50px 30px;
-        width: 94.6666666667vw
+        padding: 40px 20px 0px 30px;
+        width: 94.6666666667vw;
     }
 }
 
@@ -3330,7 +3332,7 @@ body button {
 }
 
 .thd_top-message+.thd_mod-bottom_next_link {
-    border-top: 1px solid #eaeaea
+    /* border-top: 1px solid #eaeaea */
 }
 
 .thd_top-message__content {
@@ -3959,7 +3961,7 @@ body button {
 }
 
 .thd_our_business__sec+.thd_mod-bottom_next_link {
-    border-top: 1px solid #eaeaea
+    border-top: none;
 }
 
 .thd_our_business__sec img {
