--- a/css/recruit.css
+++ b/css/recruit.css
@@ -7,6 +7,7 @@
           display: block;
           justify-content: space-between;
           align-items: center;
+          border-bottom: none;
           /* padding-bottom: 10px; */
           /* margin: 30px auto; */
         }
