--- a/css/transit1.css
+++ b/css/transit1.css
@@ -1637,7 +1637,8 @@ body button {
     height: 100%;
     object-fit: cover;
     object-position: center;
-    width: 100%
+    width: 100%;
+    filter: brightness(0.5);
 }
 
 .l-footer__contact__title {
