--- a/css/transit1.css
+++ b/css/transit1.css
@@ -318,17 +318,19 @@ body button {
     height: 20px;
     mix-blend-mode: difference;
     position: absolute;
-    /* right: 60px; */
+    right: 60px;
     top: 50%;
     transform: translateY(-50%) rotate(45deg);
-    width: 20px
+    width: 20px;
+    content: none;
 }
 
 @media(width <= 640px) {
     .thd_mod-bottom_next_link .smb-btn: after {
         height:13px;
         right: 24px;
-        width: 13px
+        width: 13px;
+        content: none;
     }
 }
 
@@ -2641,6 +2643,7 @@ body button {
 }
 
 .thd_top__group__img .wp-block-image img {
+    filter: brightness(0.9);
     height: auto;
     width: 100%
 }
@@ -2913,6 +2916,7 @@ body button {
 }
 
 .thd_top__recruit__bg img {
+    filter: brightness(0.8);
     height: 100%;
     width: auto
 }
