--- a/css/company.css
+++ b/css/company.css
@@ -92,4 +92,8 @@
     width: 18px;
     }
 
+    .wp-block-columns:not(.is-not-stacked-on-mobile)>.wp-block-column{
+      padding-bottom: 13px;
+    }
+
   }
