--- a/css/fshd.css
+++ b/css/fshd.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+main,body{
+    overflow-x: visible;
+}
+
+.index ul li a{
+    font-family: sans-serif;
+}
+
 
 .c-front-company__group{
     background-color: #99dbff;
@@ -60,6 +68,46 @@
     .c-front-company__company{
         padding: 7px;
     }
+
+    .index-main{
+        position: relative;
+        display: block;
+        justify-content: space-between;
+        align-items: center;
+        padding-bottom: 10px;
+        margin: 30px auto;
+      }
+      
+      .index-main::after {
+        content: "";
+        position: absolute;
+        bottom: -17px;
+        left: 0;
+        height: 3px; /* グラデ部分は太め */
+        width: 40%; /* グラデの長さをここで調整 */
+        background: linear-gradient( to right,
+        #99dbff  ); /* グラデ部分の色 */
+      }
+      
+      .index-main::before {
+        content: "";
+        position: absolute;
+        bottom: -16px;
+        left: 40%; /* グラデの終わりに合わせる */
+        height: 1px; /* 単色部分は細め */
+        width: calc(100% - 40%); /* 残りを単色で */
+        background-color: #9c9c9c; /* 単色の色 */
+      }
+
+      .index-more::before {
+        content: "";
+        display: inline-block;
+        width: 15px;
+        height: 2px;                   /* ← ここが線の太さ！ */
+        background: linear-gradient(#99dbff);
+        margin-right: 5px;
+        flex-shrink: 0;                /* ← これで縮まない */
+      }
 }
 
 
