--- a/css/specimen.css
+++ b/css/specimen.css
@@ -10502,6 +10502,7 @@ pre.wp-block-verse {
         padding-left: 15px;
         padding-right:  15px;
         background-color: #fff;
+        padding-top: 15px;
     }
 }
 
